fix: file tree button sizing on safari

--- a/app/ui/editor/file-tree/file-tree-item.module.css
+++ b/app/ui/editor/file-tree/file-tree-item.module.css
@@ -56,6 +56,10 @@
   background: none;
   border: none;
   color: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  aspect-ratio: 1/1;
 }
 
 .fileTreeItem > div > button:hover {
@@ -63,7 +67,7 @@
 }
 
 .fileTreeItem > div > button > * {
-  width: 82%;
+  width: 0.7rem;
   opacity: 0.6;
 }
 
